Added parallax video background, added button to view featured project live

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------------------------------------------------
-#  Get Startet Button
+#  Get Started Button
 --------------------------------------------------------------*/
 .get-started-btn {
   color: #fff;
@@ -168,6 +168,38 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 992px) {
   .get-started-btn {
+    padding: 7px 20px 8px 20px;
+    margin-right: 15px;
+  }
+}
+
+/*--------------------------------------------------------------
+#  Minimal Button
+--------------------------------------------------------------*/
+.minimal-btn {
+  color: #343a40;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 4px;
+  transition: 0.5s;
+  margin-top: 10px;
+  border: 2px solid #ffc451;
+  background: #ffc451;
+  width: fit-content;
+}
+
+.minimal-btn:hover {
+  background: #343a40;
+  border: 2px solid #343a40;
+  color: #ffc451;
+}
+
+@media (max-width: 992px) {
+  .minimal-btn {
     padding: 7px 20px 8px 20px;
     margin-right: 15px;
   }
@@ -383,12 +415,36 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-#hero {
+/* #hero {
   width: 100%;
   height: 100vh;
   background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
   position: relative;
+} */
+
+#about, #skills, #featured, #portfolio, #contact{
+  background: none repeat scroll 0 0 #fff;
+}
+
+#hero {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  /* right: 0; */
+  /* bottom: 0; */
+}
+
+.ParallaxVideo{ 
+  height: 300px;
+  padding-bottom: 50px;
+  padding-top: 50px; 
+}
+.ParallaxVideo video{ 
+  min-width: 100%;
+  position: fixed;
+  top:0;
+  z-index: -999;
 }
 
 #hero:before {
