Edited titles for projects and added transition on hover for project community button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,11 +190,12 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #ffc451;
   background: #ffc451;
   width: fit-content;
+  transition: ease-in-out .3s !important;
 }
 
 .minimal-btn:hover {
-  background: #343a40;
-  border: 2px solid #343a40;
+  background: #fff;
+  border: 2px solid #ffc451;
   color: #ffc451;
 }
 
